@@ -1,0 +1,2 @@
+#
+Unicode=\u30E6\u30CB\u30B3\u30FC\u30C9
